test/expected/k_typedef_i-c.out
struct S { typedef int I; }
           ^
12: error: nested types are not supported in C
